tests/trybuild-failures/testify_not_binary_expression.rs
use assertify::testify;

testify!(foo_test, "foo");

fn main() {
    unreachable!();
}
